# bomshell

./: .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  README.rst  dev-requirements.txt  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: bomshell.rst  index.rst
src/bomshell/: __main__.py  bom_paths.py  catalog.json  cli.py  dump_gis.py  fetch.py  fetch_gis.py  forecast.py  knobs.py  output.py  settings.py  spatial.py  visualize.py
tests/: test_bom_paths.py  test_bomshell.py  test_cli_forecast.py  test_cli_spatial.py  test_fetch.py  test_fetch_gis.py  test_forecast.py  test_knobs.py  test_visualize.py
